RESOLVED FIXED219605
[LFC][IFC] Overflowing text content should not break at inline box boundary
https://bugs.webkit.org/show_bug.cgi?id=219605
Summary [LFC][IFC] Overflowing text content should not break at inline box boundary
alan
Reported 2020-12-07 10:42:51 PST
<span>1</span><span id=second>2</span> when "2" overflows, let's wrap at "second"
Attachments
Patch (6.25 KB, patch)
2020-12-07 11:03 PST, alan
no flags
alan
Comment 1 2020-12-07 11:03:38 PST
EWS
Comment 2 2020-12-07 12:20:00 PST
Committed r270514: <https://trac.webkit.org/changeset/270514> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415564 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-07 12:20:19 PST
Note You need to log in before you can comment on or make changes to this bug.