[LFC][IFC] Overflowing text content should not break at inline box boundary https://bugs.webkit.org/show_bug.cgi?id=219605

Reviewed by Antti Koivisto.

Source/WebCore:

Wrap the overflowing content on the inline box boundary when possible.
<span>fits</span><span>overflows</span>
When the text "overflows" completely overflows, let's wrap the content after '</span>'.

Test: fast/layoutformattingcontext/overflow-at-inline-box-boundary-simple.html

* layout/inlineformatting/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingTextContent const):
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::commitPartialContent):

LayoutTests:

* fast/layoutformattingcontext/overflow-at-inline-box-boundary-simple-expected.html: Added.
* fast/layoutformattingcontext/overflow-at-inline-box-boundary-simple.html: Added.


Canonical link: https://commits.webkit.org/232190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270514 268f45cc-cd09-0410-ab3c-d52691b4dbfc